SERVER-59925 Stress test time-series inserts