src/mongo/db/timeseries/bucket_catalog.h
@@ -370,7 +370,8 @@ public:
                                                  const std::shared_ptr<ExecutionStats>& stats);
 
         // Access to the bucket is controlled by this lock
-        mutable Mutex _mutex;
+        mutable Mutex _mutex =
+            MONGO_MAKE_LATCH(HierarchicalAcquisitionLevel(2), "BucketCatalog::Bucket::_mutex");
 
         // The bucket ID for the underlying document
         OID _id = OID::gen();
